@@ -158,6 +158,9 @@ following names for their contribution to the product.
 * Yuvaraj Pandian T
 * Zachary Hauri
 
+== Patch Contributors ==
+* Beau
+
 == Translators ==
 * Anders Wegge Jakobsen
 * Hk kng
